SSC-XX cruise page, overview fix alignment for every case (price/bonus/wailtlist...)

--- a/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruiseoverview.less
+++ b/silversea-com-ui/jcr_root/etc/designs/silversea-com/clientlib-base/less/components/c-cruise/c-cruiseoverview.less
@@ -3,31 +3,30 @@
         &--overview {
             .voyage {
                 &table {
-                    display: table;
-                    width: 100%;
-                    text-transform: uppercase;
-                    font-size: 13px;
                     color: @grey--3;
-                    text-align: center;
+                    display: table;
+                    font-size: 13px;
                     margin-bottom: 10px;
+                    text-align: center;
+                    text-transform: uppercase;
+                    width: 100%;
 
                     &__elem {
                         display: table-cell;
-                        width: 1%;
-                        border-bottom: solid 1px @grey--d;
-                        border-right: solid 1px @grey--d;
-                        border-top: solid 1px @grey--d;
+                        border: solid 1px @grey--d;
+                        border-left-width: 0;
                         padding: 10px 3px;
-                        vertical-align: middle;
+                        vertical-align: top;
+                        width: 1%;
 
                         &:first-child {
                             border-left: solid 1px @grey--d;
                         }
 
                         .lead {
-                            font-weight: 700;
-                            font-size: 25px;
                             color: @blue;
+                            font-size: 25px;
+                            font-weight: 700;
                             margin: 5px 0 0;
                             white-space: nowrap;
 
@@ -38,15 +37,17 @@
 
                         .lead__top {
                             &:before {
-                                content: '\00a0';
+                                content: '\A\A';
                                 display: block;
+                                white-space: pre;
                             }
                         }
 
                         .lead__bottom {
                             &:after {
-                                content: '\00a0';
+                                content: '\A\A';
                                 display: block;
+                                white-space: pre;
                             }
                         }
 
@@ -57,8 +58,8 @@
                         }
 
                         span {
-                            line-height: 1;
                             display: block;
+                            line-height: 1;
                         }
                     }
                 }
@@ -71,11 +72,11 @@
                     }
 
                     &__info {
+                        background-color: @blue;
+                        color: @white;
                         font-size: 14px;
-                        color: white;
                         font-weight: bold;
                         text-align: center;
-                        background-color: @blue;
 
                         p {
                             margin: 0;
